Fixed z-indexes (#18)
* Cart: close button working

* Cart: cart open button connected

* Fix: filter section layout

* Function: add to cart button triggering addToCart function

* Functions: cart info in Local Storage

* Pulled changes

* Updated categories margin top

* Fixed: z-index in different sections

* Fix: z-index in categories.css

--- a/src/styles/products-style.css
+++ b/src/styles/products-style.css
@@ -26,8 +26,7 @@ body {
     
     .product {        
         /* position: relative; */
-        border: 1px solid #ddd;
-        border-radius: 5px;
+        border: 1px solid var(--outlines-color);
         display: flex;
         flex-direction: column;
         justify-content: space-between;
